[package]
name = "authentication-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
