[package]
name = "teleman-authentication-service"
version = "0.1.0"
authors = ["Roland Gorácz <roland@goracz.cloud>"]
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "controller",
    "database",
    "entity",
    "model",
    "migration",
    "repository",
    "service",
    "utility"
]

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
actix-web = "4"
actix-cors = "0.6.4"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
rdkafka = "0.29.0"
dotenvy = "0.15"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
sentry = { version = "0.29.2", features = ["profiling"] }
sentry-actix = "0.29.2"
controller = { path = "./controller" }
database = { path = "./database" }
migration = { path = "./migration" }
repository = { path = "./repository" }
utility = { path = "utility" }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
