[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1.24.2", features = ["full"] }
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
rdkafka = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
password-hash = "0.4.2"
argon2 = "0.4.1"
log = "0.4.17"
entity = { path = '../entity' }
repository = { path = '../repository' }
model = { path = '../model' }
utility = { path = "../utility" }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
