[package]
name = "utility"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "utility"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
chrono = "0.4.23"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
