[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
