[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
actix-web = "4"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
